User activate feature
